improved speed and performance with user-friendlyness

--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
       /* Critical loading styles */
       #root { min-height: 100vh; }
       .loading-container { 
-        display: flex; 
-        justify-content: center; 
-        align-items: center; 
         min-height: 100vh; 
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        /* No background - completely transparent */
       }
     </style>
     
@@ -34,21 +31,9 @@
   </head>
   <body>
     <div id="root">
-      <!-- Loading fallback -->
-      <div class="loading-container">
-        <div style="color: white; text-align: center;">
-          <div style="width: 40px; height: 40px; border: 3px solid rgba(255,255,255,0.3); border-top: 3px solid white; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 1rem;"></div>
-          <p>Loading QuizGen AI...</p>
-        </div>
-      </div>
+      <!-- Completely invisible loading fallback -->
+      <div class="loading-container"></div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
-    
-    <style>
-      @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-      }
-    </style>
   </body>
 </html>
