fixed lazy load background color issue for desktop devices

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         min-height: 100vh; 
         /* No background - completely transparent */
       }
+      /* Ensure clean initial background */
+      body {
+        background: #0F172A !important; /* Simple dark background initially */
+        margin: 0;
+        padding: 0;
+      }
     </style>
     
     <title>QuizGen AI - AI-Powered Quiz Generator</title>
