--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
     <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+    <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+<script type="module">
+	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+
+	createChat({
+		webhookUrl: 'https://n8n-1-w07k.onrender.com/webhook/3b0a7723-18dc-49a5-b4ad-5eee0028d5b2/chat'
+	});
+</script>
     
     <!-- Preload critical resources -->
     <link rel="modulepreload" href="/src/main.tsx" />
